--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -13,4 +12,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Open Sans", sans-serif;
+}
+
+nav > ul > li > a {
+  @apply hover:text-primary px-[0.313rem] py-[0.625rem];
+}
+
+.btn-primary {
+  @apply text-white px-[1.875rem] py-[0.5rem] rounded-3xl bg-primary cursor-pointer hover:opacity-90 transition-all;
 }
