--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,12 +11,13 @@
 html,
 body {
   max-width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
   font-family: "Open Sans", sans-serif;
 }
 
 nav > ul > li > a {
-  @apply hover:text-primary px-[0.313rem] py-[0.625rem];
+  @apply hover:text-primary px-[0.313rem] py-[0.625rem] transition-all;
 }
 
 .btn-primary {
