--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,7 @@ nav > ul > li > a {
 .slick-dots .slick-active div {
   @apply bg-primary w-4 h-4;
 }
+
+.menu-nav li {
+  @apply py-2 px-5 rounded-3xl border;
+}
